Added the design icon image to my project

--- a/index.html
+++ b/index.html
@@ -25,9 +25,20 @@
             <p>Then we help translate them into effective elegant solution</p>
     </div>
     <div class = "part3">
-        <img id="middle" src ="IP3/assets/backgrounds/s_image.jpg">
-        <h2 class ="services"><b>SERVICES</b></h2>
-        <p>Before we sign a contract or write a line of code our team will spend the necessary time needed </p>
-    </div>             
+            <img id="middle" src ="IP3/assets/backgrounds/s_image.jpg">
+            <div class ="services">
+                <h2><b>SERVICES</b></h2>
+                <p>Before we sign a contract or write a line of code our team will spend the necessary time needed to understand our product vision.</p>
+                <p>The outcome of this scoping session is a propasal or high-level statement of work.</p>
+                <p>It is based on your requirements,we can provide a complete offering or just the pieces you need</p>
+            </div>    
+    </div>  
+    <div class ="part3">
+        <div class = "what">
+        <h2>WHAT WE DO</h2>
+        </div>
+        <img id= "design" src= "IP3/assets/services_icons/design_icon.png">
+        <img id="second" 
+    </div>                
     </body>         
 </html>
