Added the dev icon image to my project

--- a/index.html
+++ b/index.html
@@ -37,8 +37,10 @@
         <div class = "what">
         <h2>WHAT WE DO</h2>
         </div>
-        <img id= "design" src= "IP3/assets/services_icons/design_icon.png">
-        <img id="second" 
+        <!-- <div class="float"> -->
+            <img id= "design" src= "IP3/assets/services_icons/design_icon.png">
+            <img id="dev" src="IP3/assets/services_icons/dev_icon.png">
+         </div>
     </div>                
     </body>         
 </html>
