--- a/index.html
+++ b/index.html
@@ -25,22 +25,50 @@
             <p>Then we help translate them into effective elegant solution</p>
     </div>
     <div class = "part3">
-            <img id="middle" src ="IP3/assets/backgrounds/s_image.jpg">
+            <img id="middle" src ="IP3/assets/backgrounds/s_image.jpg" width="100%">
             <div class ="services">
                 <h2><b>SERVICES</b></h2>
                 <p>Before we sign a contract or write a line of code our team will spend the necessary time needed to understand our product vision.</p>
                 <p>The outcome of this scoping session is a propasal or high-level statement of work.</p>
                 <p>It is based on your requirements,we can provide a complete offering or just the pieces you need</p>
             </div>    
-    </div>  
+    </div>
+
     <div class ="part3">
         <div class = "what">
         <h2>WHAT WE DO</h2>
         </div>
-        <!-- <div class="float"> -->
-            <img id= "design" src= "IP3/assets/services_icons/design_icon.png">
-            <img id="dev" src="IP3/assets/services_icons/dev_icon.png">
-         </div>
-    </div>                
+            <div class ="formation">
+            <div class="row">
+                <div class="col-md-4 logos">
+                <div class ="onClick1">
+                    <div id ="click1">  
+                        <img src ="IP3/assets/services_icons/design_icon.png"> 
+                        <p><b>DESIGN</b></p>
+                    </div>
+            <div id ="peach">
+                <h5>DESIGN</h5>
+                <p>Our design practice offers a full range of services including brand strategy,interaction and visual design and user experience testing.</p>
+                <p>Thoughout your project, our design create and implement visual designs and workflows, solicit user feedback and work with you to make sure that what gets built is what is needed</p>
+            </div>
+            </div>
+            </div>
+            <div class ="col-md-4">
+                <div class ="click2">
+                <img id="dev" src="IP3/assets/services_icons/dev_icon.png">
+                <p><b>DEVELOPMENT</p></b>
+                </div>
+                <div id ="peach2">
+                    <h5>DEVELOPMENT</h5>
+                    <p>All engineers are fluent in the latest enterprise, web development technologies.</p>
+                    <p>They collaborate with your team to write and improve code on a daily basis using proven practices such as, test-driven developments and pair programming</p>
+                </div>
+            </div>
+            <div class="click3">
+                <img id ="product" src ="IP3/assets/services_icons/product_icon.png">
+                <p><b>PRODUCT MANAGEMENT</b></p>
+            </div>
+        </div>
+        </div>                
     </body>         
 </html>
