--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <body> 
     <!-- <a href="#home"> -->   
     <div class = "part1">
-            <img id="top" src = "IP3/assets/logo/logo.png">  
+            <img id="top" src = "assets/logo/logo.png">  
             <h1 class="welcome"><b>WELCOME.</b></h1> 
             <h1><b>TO DELANI STUDIO</b></h1>
-            <img src="IP3/assets/backgrounds/h_img.jpg" width="100%">
+            <img src="assets/backgrounds/h_img.jpg" width="100%">
             <p>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</p> 
-            <img id="bottom" src = "IP3/assets/mouse_click.png">
+            <img id="bottom" src = "assets/mouse_click.png">
     </div>
     <div class ="part2">
             <h2>ABOUT US</h2>
@@ -25,7 +25,7 @@
             <p>Then we help translate them into effective elegant solution</p>
     </div>
     <div class = "part3">
-            <img id="middle" src ="IP3/assets/backgrounds/s_image.jpg" width="100%">
+            <img id="middle" src ="assets/backgrounds/s_image.jpg" width="100%">
             <div class ="services">
                 <h2><b>SERVICES</b></h2>
                 <p>Before we sign a contract or write a line of code our team will spend the necessary time needed to understand our product vision.</p>
@@ -43,7 +43,7 @@
                 <div class="col-md-4 logos">
                 <div class ="onClick1">
                     <div id ="click1">  
-                        <img src ="IP3/assets/services_icons/design_icon.png"> 
+                        <img src ="assets/services_icons/design_icon.png"> 
                         <p><b>DESIGN</b></p>
                     </div>
             <div id ="peach">
@@ -55,7 +55,7 @@
             </div>
             <div class ="col-md-4">
                 <div class ="click2">
-                <img id="dev" src="IP3/assets/services_icons/dev_icon.png">
+                <img id="dev" src="assets/services_icons/dev_icon.png">
                 <p><b>DEVELOPMENT</p></b>
                 </div>
                 <div id ="peach2">
@@ -65,7 +65,7 @@
                 </div>
             </div>
             <div class="click3">
-                <img id ="product" src ="IP3/assets/services_icons/product_icon.png">
+                <img id ="product" src ="assets/services_icons/product_icon.png">
                 <p><b>PRODUCT MANAGEMENT</b></p>
             </div>
         </div>
