Portfolio images added to my work

--- a/index.html
+++ b/index.html
@@ -1,74 +1,130 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
-        <link href="css/styles.css" rel="stylesheet" type="text/css">
-        <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha384-mlceH9HlqLp7GMKHrj5Ara1+LvdTZVMx4S1U43/NxCvAkzIo8WJ0FE7duLel3wVo" crossorigin="anonymous"></script>
-        <script src="js/scripts.js"></script>
-        <title>Delani Studio Project</title>
-    </head>
-    <body> 
-    <!-- <a href="#home"> -->   
-    <div class = "part1">
-            <img id="top" src = "assets/logo/logo.png">  
-            <h1 class="welcome"><b>WELCOME.</b></h1> 
-            <h1><b>TO DELANI STUDIO</b></h1>
-            <img src="assets/backgrounds/h_img.jpg" width="100%">
-            <p>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</p> 
-            <img id="bottom" src = "assets/mouse_click.png">
+
+<head>
+    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <script src="https://code.jquery.com/jquery-3.4.1.js"
+        integrity="sha384-mlceH9HlqLp7GMKHrj5Ara1+LvdTZVMx4S1U43/NxCvAkzIo8WJ0FE7duLel3wVo"
+        crossorigin="anonymous"></script>
+    <script src="js/scripts.js"></script>
+    <title>Delani Studio Project</title>
+</head>
+
+<body>
+    <!-- <a href="#home"> -->
+    <div class="part1">
+        <img id="top" src="assets/logo/logo.png">
+        <h1 class="welcome"><b>WELCOME.</b></h1>
+        <h1><b>TO DELANI STUDIO</b></h1>
+        <img src="assets/backgrounds/h_img.jpg" width="100%">
+        <p>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</p>
+        <img id="bottom" src="assets/mouse_click.png">
     </div>
-    <div class ="part2">
-            <h2>ABOUT US</h2>
-            <p>When you work with us, you are part of a commited team of collaborators.All aspects of our software development process are intergrated,interactive and agile.</p>
-            <p>Our approach unifies design,development and product management to create exceptional products.</p>
-            <p>We start each project by understanding our busisness goals, the user's needs  and the product requirements</p>
-            <p>Then we help translate them into effective elegant solution</p>
+    <div class="part2">
+        <h2><b>ABOUT US</b></h2>
+        <p>When you work with us, you are part of a commited team of collaborators.All aspects of our software
+            development process are intergrated,interactive and agile.</p>
+        <p>Our approach unifies design,development and product management to create exceptional products.</p>
+        <p>We start each project by understanding our busisness goals, the user's needs and the product requirements</p>
+        <p>Then we help translate them into effective elegant solution</p>
     </div>
-    <div class = "part3">
-            <img id="middle" src ="assets/backgrounds/s_image.jpg" width="100%">
-            <div class ="services">
-                <h2><b>SERVICES</b></h2>
-                <p>Before we sign a contract or write a line of code our team will spend the necessary time needed to understand our product vision.</p>
-                <p>The outcome of this scoping session is a propasal or high-level statement of work.</p>
-                <p>It is based on your requirements,we can provide a complete offering or just the pieces you need</p>
-            </div>    
+    <div class="part3">
+        <img id="middle" src="assets/backgrounds/s_image.jpg" width="100%">
+        <div class="services">
+            <h2><b>SERVICES</b></h2>
+            <p>Before we sign a contract or write a line of code our team will spend the necessary time needed to
+                understand our product vision.</p>
+            <p>The outcome of this scoping session is a propasal or high-level statement of work.</p>
+            <p>It is based on your requirements,we can provide a complete offering or just the pieces you need</p>
+        </div>
     </div>
 
-    <div class ="part3">
-        <div class = "what">
-        <h2>WHAT WE DO</h2>
+    <div class="part4">
+        <div class="what">
+            <h2><b>WHAT WE DO</b></h2>
         </div>
-            <div class ="formation">
-            <div class="row">
-                <div class="col-md-4 logos">
-                <div class ="onClick1">
-                    <div id ="click1">  
-                        <img src ="assets/services_icons/design_icon.png"> 
+        <div class="row formation">
+            <div class="col-md-4 logos">
+                <div class="onClick1">
+                    <div id="click1">
+                        <img src="assets/services_icons/design_icon.png">
                         <p><b>DESIGN</b></p>
                     </div>
-            <div id ="peach">
-                <h5>DESIGN</h5>
-                <p>Our design practice offers a full range of services including brand strategy,interaction and visual design and user experience testing.</p>
-                <p>Thoughout your project, our design create and implement visual designs and workflows, solicit user feedback and work with you to make sure that what gets built is what is needed</p>
-            </div>
-            </div>
-            </div>
-            <div class ="col-md-4">
-                <div class ="click2">
-                <img id="dev" src="assets/services_icons/dev_icon.png">
-                <p><b>DEVELOPMENT</p></b>
-                </div>
-                <div id ="peach2">
-                    <h5>DEVELOPMENT</h5>
-                    <p>All engineers are fluent in the latest enterprise, web development technologies.</p>
-                    <p>They collaborate with your team to write and improve code on a daily basis using proven practices such as, test-driven developments and pair programming</p>
+                    <div id="peach">
+                        <h5><b>DESIGN</b></h5>
+                        <p>Our design practice offers a full range of services including brand strategy,interaction and
+                            visual design and user experience testing.</p>
+                        <p>Thoughout your project, our design create and implement visual designs and workflows, solicit
+                            user feedback and work with you to make sure that what gets built is what is needed</p>
+                    </div>
                 </div>
             </div>
-            <div class="click3">
-                <img id ="product" src ="assets/services_icons/product_icon.png">
-                <p><b>PRODUCT MANAGEMENT</b></p>
+            <div class="col-md-4 devs">
+                <div class="onClick2">
+                    <div id="click2">
+                        <img src="assets/services_icons/dev_icon.png">
+                        <p><b>DEVELOPMENT</b></p>
+                    </div>
+                    <div id="peach1">
+                        <h5><b>DEVELOPMENT</b></h5>
+                        <p>All engineers are fluent in the latest enterprise, web development technologies.</p>
+                        <p>They collaborate with your team to write and improve code on a daily basis using proven
+                            practices such as, test-driven developments and pair programming</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 product">
+                <div class="onClick3">
+                    <div id="click3">
+                        <img src="assets/services_icons/product_icon.png">
+                        <p><b>PRODUCT MANAGEMENT</b></p>
+                    </div>
+                    <div id="peach2">
+                        <h5><b>PRODUCT</b></h5>
+                        <p>Planning and development is interactive because we are constantly coding and testing, the
+                            products we build are always ready to go live.</p>
+                        <p>This interactive process allows for changes as business environments evolve.</p>
+                    </div>
+                </div>
             </div>
         </div>
-        </div>                
-    </body>         
+    </div>
+    <div class = "part5">
+        <div class = "portfolio">
+            <h2><b>PORTFOLIO</b></h2>
+        </div>
+        <div class ="container">
+            <div class = "row">
+                <div class ="col-md-3">
+                    <img src="assets/portfolio/work4.jpg" width=100%> 
+                </div>
+                <div class="col-md-3">
+                    <img src="assets/portfolio/work3.jpg" width=100%>     
+                </div>
+                <div class="col-md-3">
+                    <img src="assets/portfolio/work2.jpg" width=100%>
+                </div>
+                <div class="col-md-3">
+                    <img src="assets/portfolio/work1.jpg" width=100%><br><br>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-3">
+                    <img src="assets/portfolio/work5.jpg" width=100%>
+                </div>
+                <div class="col-md-3">
+                    <img src="assets/portfolio/work6.jpg" width=100%>
+                </div>
+                <div class ="col-md-3">
+                    <img src="assets/portfolio/work7.jpg" width=100%>
+                </div>
+                <div class="col-md-3">
+                    <img src="assets/portfolio/work8.jpg" width=100%>
+                </div>
+            </div>
+        </div>
+    </div>
+</body>
+
 </html>
