Added names for the portfolio projects

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                         <p><b>PRODUCT MANAGEMENT</b></p>
                     </div>
                     <div id="peach2">
-                        <h5><b>PRODUCT</b></h5>
+                        <h5><b>PRODUCT MANAGEMENT</b></h5>
                         <p>Planning and development is interactive because we are constantly coding and testing, the
                             products we build are always ready to go live.</p>
                         <p>This interactive process allows for changes as business environments evolve.</p>
@@ -96,35 +96,62 @@
         </div>
         <div class ="container">
             <div class = "row">
-                <div class ="col-md-3">
+                <div class ="col-md-3 opaque">
                     <img src="assets/portfolio/work4.jpg" width=100%> 
+                    <div class="hoverable">
+                        <p>Dark Image</p>
+                    </div>
                 </div>
-                <div class="col-md-3">
-                    <img src="assets/portfolio/work3.jpg" width=100%>     
+                <div class="col-md-3 opaque">
+                    <img src="assets/portfolio/work3.jpg" width=100%>
+                    <div class="hoverable">
+                        <p>Mighty Opa</p>
+                    </div>    
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3 opaque">
                     <img src="assets/portfolio/work2.jpg" width=100%>
+                <div class ="hoverable">
+                    <p>The Crystal</p>
+                    </div>
                 </div>
-                <div class="col-md-3">
-                    <img src="assets/portfolio/work1.jpg" width=100%><br><br>
+                <div class="col-md-3 opaque">
+                    <img src="assets/portfolio/work1.jpg" width=100%>
+                <div class ="hoverable">
+                    <p>The Brave</p>
+                </div>  
                 </div>
-            </div>
+            </div><br><br>
             <div class="row">
-                <div class="col-md-3">
+                <div class="col-md-3 opaque">
                     <img src="assets/portfolio/work5.jpg" width=100%>
+                <div class ="hoverable">
+                    <p>Good day</p>
+                </div>    
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3 opaque">
                     <img src="assets/portfolio/work6.jpg" width=100%>
+                <div class ="hoverable">
+                    <p>Matrix Box</p>
+                </div>    
                 </div>
-                <div class ="col-md-3">
+                <div class ="col-md-3 opaque">
                     <img src="assets/portfolio/work7.jpg" width=100%>
+                <div class ="hoverable">
+                    <p>Burned Up</p>
                 </div>
-                <div class="col-md-3">
+                </div>
+                <div class="col-md-3 opaque">
                     <img src="assets/portfolio/work8.jpg" width=100%>
+                <div class="hoverable">
+                    <p>Bailey Wow</p>
+                </div>    
                 </div>
             </div>
         </div>
     </div>
+    <div class = "part6">
+        <div class="bg-img">
+       </div>
+    </div>
 </body>
-
 </html>
