Added the contact us image and the form

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 </head>
 
 <body>
-    <!-- <a href="#home"> -->
     <div class="part1">
         <img id="top" src="assets/logo/logo.png">
         <h1 class="welcome"><b>WELCOME.</b></h1>
@@ -90,14 +89,14 @@
             </div>
         </div>
     </div>
-    <div class = "part5">
-        <div class = "portfolio">
+    <div class="part5">
+        <div class="portfolio">
             <h2><b>PORTFOLIO</b></h2>
         </div>
-        <div class ="container">
-            <div class = "row">
-                <div class ="col-md-3 opaque">
-                    <img src="assets/portfolio/work4.jpg" width=100%> 
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3 opaque">
+                    <img src="assets/portfolio/work4.jpg" width=100%>
                     <div class="hoverable">
                         <p>Dark Image</p>
                     </div>
@@ -106,52 +105,68 @@
                     <img src="assets/portfolio/work3.jpg" width=100%>
                     <div class="hoverable">
                         <p>Mighty Opa</p>
-                    </div>    
+                    </div>
                 </div>
                 <div class="col-md-3 opaque">
                     <img src="assets/portfolio/work2.jpg" width=100%>
-                <div class ="hoverable">
-                    <p>The Crystal</p>
+                    <div class="hoverable">
+                        <p>The Crystal</p>
                     </div>
                 </div>
                 <div class="col-md-3 opaque">
                     <img src="assets/portfolio/work1.jpg" width=100%>
-                <div class ="hoverable">
-                    <p>The Brave</p>
-                </div>  
+                    <div class="hoverable">
+                        <p>The Brave</p>
+                    </div>
                 </div>
             </div><br><br>
             <div class="row">
                 <div class="col-md-3 opaque">
                     <img src="assets/portfolio/work5.jpg" width=100%>
-                <div class ="hoverable">
-                    <p>Good day</p>
-                </div>    
+                    <div class="hoverable">
+                        <p>Good day</p>
+                    </div>
                 </div>
                 <div class="col-md-3 opaque">
                     <img src="assets/portfolio/work6.jpg" width=100%>
-                <div class ="hoverable">
-                    <p>Matrix Box</p>
-                </div>    
+                    <div class="hoverable">
+                        <p>Matrix Box</p>
+                    </div>
                 </div>
-                <div class ="col-md-3 opaque">
+                <div class="col-md-3 opaque">
                     <img src="assets/portfolio/work7.jpg" width=100%>
-                <div class ="hoverable">
-                    <p>Burned Up</p>
-                </div>
+                    <div class="hoverable">
+                        <p>Burned Up</p>
+                    </div>
                 </div>
                 <div class="col-md-3 opaque">
                     <img src="assets/portfolio/work8.jpg" width=100%>
-                <div class="hoverable">
-                    <p>Bailey Wow</p>
-                </div>    
+                    <div class="hoverable">
+                        <p>Bailey Wow</p>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-    <div class = "part6">
-        <div class="bg-img">
-       </div>
+    <div class="part6">
+        <img src="assets/backgrounds/c_image.jpg" width=100%>
+        <div class ="contacts">
+            <h2><b>CONTACT US</b></h2>
+        </div>
+            <div>
+                <form >
+                    <div class="form-row first-name">
+                        <div class="col-md-6 thick" style="width:300px">
+                            <input style="background-color: transparent" type="text" class="form-control" placeholder="Name...">
+                        </div>
+                        <div class="col-md-6">
+                            <input style="background-color: transparent" type="text" class="form-control" placeholder="Last name">
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
     </div>
 </body>
+
 </html>
