Added the social media icons

--- a/index.html
+++ b/index.html
@@ -153,20 +153,34 @@
         <div class ="contacts">
             <h2><b>CONTACT US</b></h2>
         </div>
-            <div>
-                <form >
+                <form id="form1" >
+                    <form name="details" onsubmit="event.preventDefault(); details()">
                     <div class="form-row first-name">
-                        <div class="col-md-6 thick" style="width:300px">
+                        <div class="col-md-6" style="width:300px">
                             <input style="background-color: transparent" type="text" class="form-control" placeholder="Name...">
                         </div>
                         <div class="col-md-6">
-                            <input style="background-color: transparent" type="text" class="form-control" placeholder="Last name">
+                            <input style="background-color: transparent" type="text" class="form-control" placeholder="Email...">
                         </div>
-                    </div>
+                    </div><br>
+                        <div class ="col-md-12 message">
+                            <textarea class="haia" style ="background-color:transparent" type="text" class="form-control" placeholder="Your message here..."></textarea>
+                        <in
+                        </div>
                 </form>
-            </div>
-        </div>
+        </div><br><br>
+    <div class ="part7">
+        <img src="assets/social_icons/twitter.png">
+        <img src="assets/social_icons/dribble.png">
+        <img src="assets/social_icons/facebook.png">
+        <img src="assets/social_icons/g_plus.png">
+        <img src="assets/social_icons/skype.png">
+        <img src="assets/social_icons/stumble_upon.png">
+        <img src="assets/social_icons/behance.png">
+        <img src="assets/social_icons/pinterest.png">
+        <img src="assets/social_icons/flickr.png"><br><br>
+        <p>Delani Studio</p>
+        <p>2019</p>
     </div>
 </body>
-
 </html>
