Identation and spacing

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             development process are intergrated,interactive and agile.</p>
         <p>Our approach unifies design,development and product management to create exceptional products.</p>
         <p>We start each project by understanding our busisness goals, the user's needs and the product requirements</p>
-        <p>Then we help translate them into effective elegant solution</p>
+        <p>Then we help translate them into effective elegant solutions</p>
     </div>
     <div class="part3">
         <img id="middle" src="assets/backgrounds/s_image.jpg" width="100%">
@@ -167,7 +167,7 @@
                 </div><br>
                 <div class="col-md-12 message">
                     <textarea class="haia" style="background-color:transparent" id="message" type="text"
-                        class="form-control" placeholder="Your message here..."></textarea>
+                        class="form-control" placeholder="Your message here..."></textarea> <br>
                     <button class="submit" name="submit">Submit</button>
                 </div>
 
